# nonebot-plugin-dicky-pk

./: README.md  license  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
nonebot_plugin_dicky_pk/: __init__.py
nonebot_plugin_dicky_pk/src/: config.py  main.py
