[tool.poetry]
name = "nonebot-plugin-dicky-pk"
version = "0.3.1"
description = "Dicky-PK in NoneBot2"
authors = ["月ヶ瀬"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "nonebot_plugin_dicky_pk" },
]
homepage = "https://github.com/tkgs0/nonebot-plugin-dicky-pk"
repository = "https://github.com/tkgs0/nonebot-plugin-dicky-pk"
keywords = ["NoneBot", "Dicky-PK"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot-adapter-onebot = "^2.2.0"
nonebot2 = "^2.0.0-rc.2"
arrow = ">=1.2.3"
dbutils = ">=3.0.2"
ujson = ">=5.2.0"

[tool.poetry.dev-dependencies]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

